--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "gridfs-stream": "^1.1.1",
     "mongoose": "^5.11.1",
     "multer": "^1.4.2",
-    "multer-gridfs-storage": "^4.2.0"
+    "multer-gridfs-storage": "^4.2.0",
+    "uuid": "^8.3.1"
   }
 }
