--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.21.0",
     "base64-img": "^1.0.4",
     "bootstrap": "^4.5.3",
+    "concurrently": "^5.3.0",
     "moment": "^2.29.1",
+    "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -20,7 +22,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"cd backend && nodemon server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
